--- a/Service/Views/Shared/_Layout.cshtml
+++ b/Service/Views/Shared/_Layout.cshtml
@@ -77,5 +77,10 @@
         </div>
     </footer>
 
+
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
 </body>
 </html>
