--- a/Service/Views/Shared/_Layout.cshtml
+++ b/Service/Views/Shared/_Layout.cshtml
@@ -94,6 +94,9 @@
         </div>
     </footer>
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="~/lib/jquery/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
