--- a/Service/Views/Shared/_Layout.cshtml
+++ b/Service/Views/Shared/_Layout.cshtml
@@ -1,13 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@inject IHttpContextAccessor HttpContextAccessor
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - InventorySystem</title>
 
-    <!-- ПОДКЛЮЧАЕМ Home.css ПЕРВЫМ -->
     <link rel="stylesheet" href="~/css/Home.css" asp-append-version="true" />
-    <!-- ПОДКЛЮЧАЕМ shared.css ПОСЛЕ Home.css -->
     <link rel="stylesheet" href="~/css/shared.css" asp-append-version="true" />
 </head>
 <body>
@@ -15,7 +15,6 @@
         <div class="header-top">
             <div class="logo">Inventory System</div>
 
-            <!-- ГАМБУРГЕР ДЛЯ МОБИЛЬНЫХ -->
             <div class="hamburger" id="hamburger">
                 <span></span>
                 <span></span>
@@ -23,11 +22,23 @@
             </div>
 
             <div class="auth-buttons">
-                <a href="#" id="click-to-show" class="btn-login">Войти</a>
+                @{
+                    var authToken = HttpContextAccessor.HttpContext?.Session.GetString("AuthToken");
+                }
+                @if (!string.IsNullOrEmpty(authToken))
+                {
+                    <form asp-controller="Account" asp-action="Logout" method="post" style="display:inline-flex; align-items:center;">
+                        @* Используем тот же класс btn-login *@
+                        <button type="submit" class="btn-login">Выход</button>
+                    </form>
+                }
+                else
+                {
+                    <a href="#" id="click-to-show" class="btn-login">Войти</a>
+                }
             </div>
         </div>
 
-        <!-- БОКОВОЕ МЕНЮ ДЛЯ МОБИЛЬНЫХ -->
         <div class="side-menu" id="sideMenu">
             <button class="close-btn" id="closeMenu">×</button>
             <nav class="mobile-nav">
@@ -35,7 +46,17 @@
                 <a asp-controller="Home" asp-action="SiteInformation">О нас</a>
                 <a asp-controller="Home" asp-action="Functions">Функции</a>
                 <a asp-controller="Home" asp-action="Contacts">Контакты</a>
-                <a href="#" id="mobile-login-btn" class="btn-login mobile-login">Войти</a>
+
+                @if (!string.IsNullOrEmpty(authToken))
+                {
+                    <form asp-controller="Account" asp-action="Logout" method="post" style="width: 100%;">
+                        <button type="submit" class="btn-login mobile-login" style="width: 100%; text-align: left; padding-left: 0;">Выход</button>
+                    </form>
+                }
+                else
+                {
+                    <a href="#" id="mobile-login-btn" class="btn-login mobile-login">Войти</a>
+                }
             </nav>
         </div>
 
@@ -94,16 +115,9 @@
         </div>
     </footer>
 
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
-
-
-
-
-
 </body>
 </html>
